# intersection-algorithms

./: .gitignore  CMakeLists.txt  README.md
include/: aux.hpp  barbayAndKenyon.hpp  bruteForceIntersection.hpp  searchAlgorithms.hpp
test/: CMakeLists.txt  test_bk_intersection.cpp
tools/: CMakeLists.txt  bk_intersection.cpp
